[metadata]
name = Pymacs
version = 0.26
author = François Pinard
maintainer = Dennis Gentry
author_email = dennis.gentry@gmail.com
summary = Interface between Emacs Lisp and Python
description_file = README.md
project_url = Source, http://github.com/dgentry/Pymacs
requires_python = >=2.2
license = GPLv2

[files]
modules = Pymacs
extra_files = 
    COPYING
    Makefile
    Pymacs.py.in
    README.md
    THANKS
    TODO
    pppp
    pppp.rst.in
    ppppconfig.py
    pymacs.el.in
    pymacs.rst.in
    setup.cfg
    setup.py
